--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.memoryprofiler": "1.1.6",
     "com.unity.mobile.android-logcat": "1.4.4",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.profiling.core": "1.0.2",
